chore(dependencies): update JUnit and Mockito versions, add Byte Buddy dependencies